# regeste

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.md  lancer.sh  pyproject.toml  regeste.spec
.serena/: project.yml
regeste/: __init__.py  __main__.py  i18n.py
regeste/cli/: __init__.py  app.py
regeste/core/: __init__.py  costs.py  export.py  imaging.py  project.py  registry.py  transcriber.py  transcription_mode.py
regeste/core/providers/: __init__.py  base.py  claude.py  gemini.py  openai_compat.py
regeste/export/: __init__.py  common.py  csv_export.py  dc.py  ead.py  formats.py  html_export.py  journal.py  mapping.py  markdown_export.py  mets.py  pdf_export.py  sqlite_export.py  xlsx_common.py  xlsx_export.py  zip_export.py
regeste/gui/: __init__.py  main_window.py  prompt_dialog.py  settings_dialog.py  theme.py  worker.py
regeste/gui/panels/: __init__.py  export_panel.py  log_panel.py  review_panel.py  settings_panel.py  (+1 more)
regeste/locale/: regeste.pot
regeste/pivot/: __init__.py  atomic_io.py  build.py  hashing.py  models.py  status.py  store.py  utils.py
regeste/review/: __init__.py  queue.py  validation.py
regeste/translation/: __init__.py  glossary.py  guards.py  provider.py  translate.py
scripts/: extract_translations.py
tests/: conftest.py  test_cli.py  test_costs.py  test_export.py  test_export_formats.py  test_gui.py  test_gui_panels.py  test_i18n.py  test_imaging.py  test_journal_export.py  test_pivot.py  test_pivot_e2e.py  test_project.py  test_providers.py  test_registry.py  test_review.py  test_transcriber.py  test_translation.py
(+18 files in other folders)
